# ubi-server

./: .env.example  .gitignore  Dockerfile  LICENSE.txt  README.md  db.sqlite3  django.env  docker-compose.yml  gunicorn.conf.py  pyproject.toml
api/: urls.py  utils.py
api/logger/: admin.py  apps.py  models.py  signals.py
api/logger/migrations/: 0001_initial.py  0002_initial.py  0003_alter_emaillog_id_alter_phonelog_id_and_more.py  0004_firebaselog_delete_phonelog_delete_pointlog.py  0005_remove_firebaselog_to_firebaselog_to.py
api/notification/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
api/notification/migrations/: 0001_initial.py  0002_remove_notification_hits_and_more.py
api/problem/: admin.py  apps.py  forms.py  helpers.py  models.py  serializers.py  urls.py  views.py
api/problem/migrations/: 0001_initial.py  0003_summernote.py  0009_testset.py  0017_color.py  (+20 more)
api/stats/: admin.py  apps.py  models.py  urls.py  views.py
api/terms/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/user/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
config/: settings.py  urls.py
nginx/: default.conf
problems/: 1001.xlsx  1002.xlsx  1003.xlsx  1004.xlsx  1005.xlsx  1006.xlsx  1007.xlsx  1008.xlsx  1009.xlsx  1010.xlsx  1011.xlsx  1012.xlsx  1013.xlsx  1014.xlsx  1015.xlsx  1016.xlsx  1017.xlsx  1018.xlsx  1019.xlsx  1020.xlsx  1021.xlsx  1022.xlsx  1023.xlsx  1024.xlsx  1025.xlsx  1026.xlsx  8001.xlsx  8003.xlsx
templates/: deeplink_redirect.html  success.html  upload_excel.html
(+18 files in other folders)
